# laptop-rppg-ppg

./: .gitignore  GITHUB_UPLOAD_CHECKLIST.md  LICENSE  README.md  analyze_session.py  plot_session.py  ppg_camera_measure.ps1  probe_camera.py  pyproject.toml  requirements.txt  rppg_camera_measure.ps1  run.bat  run_app.py  run_face.ps1  run_finger.ps1  run_ppg.bat  run_rppg.bat  run_smoke_test.ps1  run_synthetic_demo.py
src/vitals_cam/: __init__.py  analysis.py  app.py  camera.py  dataset_eval.py  roi.py  session.py  signal_processing.py  synthetic.py
tests/: test_signal_processing.py
